# mvmp-pose-reconstruction

./: .env  .gitignore  README.md  requirements.txt
datasets/Campus_Seq1/calib_cameras_campus/: calib_rt0.npz  calib_rt1.npz  calib_rt2.npz
datasets/Shelf_Seq1/calib_cameras_shelf/: calib_rt0.npz  calib_rt1.npz  calib_rt2.npz  calib_rt3.npz  calib_rt4.npz
docker/is/: Dockerfile  docker-compose.yaml
docker/k8s/: pose-reconstructor.yaml
docker/ros2/: Dockerfile  README.md  docker-compose.yaml
etc/: config.json
src/: add_wh_to_calib.py  config.py  fundamental_matrices.py  reconstructor_3d.py  skeleton_matcher.py  skeleton_tracker_main.py  skeleton_tracker_main_backup.py  skeletons.py  utils.py  video_processor.py  visualizer.py
src/is_utils/: streamChannel.py  stream_handler.py
src/skeleton_ros2/: package.xml  setup.cfg  setup.py
src/skeleton_ros2/launch/: skeleton_pipeline.launch.py
src/skeleton_ros2/skeleton_ros2/: skeleton_publisher_node.py
