<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>skeleton_ros2</name>
  <version>0.1.0</version>
  <description>
    Nó ROS 2 que executa o pipeline de reconstrução 3D de esqueletos
    (skeleton_matcher + reconstructor_3d) e publica os resultados como
    visualization_msgs/MarkerArray para visualização no RViz2.
  </description>
  <maintainer email="pessoa@ifes.edu.br">Pessoa</maintainer>
  <license>MIT</license>

  <!-- Dependências de build/runtime -->
  <depend>rclpy</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>builtin_interfaces</depend>

  <!-- Ferramentas de teste padrão (opcional, mas boa prática) -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
